feat(mcp-server): add ListDirectory and Trash tools